<resources>
    <string name="app_name">Project</string>
    <string name="title_home">Домашняя</string>
    <string name="title_service">Услуги</string>
    <string name="title_profile">Профиль</string>
    <string name="title_login">Вход</string>
    <string name="title_register">Регистрация</string>
    <string name="company_name">СК "Lenstroyremont"</string>
    <string name="current_projects">Наши текущие проекты</string>
    <string name="company_description">Реализуем сложные проекты с 1992 года. Гарантия качества и соблюдение сроков.</string>
    <string name="our_services">Наши услуги</string>
    <string name="project_image_desc">Изображение строительного проекта</string>
    <string name="service_image">Изображение услуги</string>
    <string name="add_to_cart">Добавить в заказ</string>
    <string name="enter_your_name">Ваше имя</string>
    <string name="save">Сохранить</string>
    <string name="change_photo">Изменить фото</string>
    <string name="your_services">Ваш заказ</string>
    <string name="no_services_added">У Вас не было заказов</string>
    <string name="profile_image">Изображение профиля</string>
    <string name="remove_from_cart">Убрать из корзины</string>
    <string name="price_format">%d ₽</string>
</resources>